# nix-darwin-hm

./: AGENTS.md  ARCHITECTURE.md  README.md  flake.nix  justfile
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  pipeline.yml  task.yml
.github/workflows/: codebase-brain-image.yml  repomix-pack.yml
.llm/: repomix.xml
docs/: mnemosyne-catchup.md
home/: default.nix  ssh_config.nix
home/apps/: 1password.nix  claude-mem.nix  default.nix
home/cli/: default.nix  tmux.nix
home/cli/claude/: default.nix  mem0-add.sh  mem0-recall-hook.sh  mem0_recall_format.py  mem0ctl.sh  mnemosyne-drain.sh  mnemosyne-enqueue.sh  moneta-recall-hook.sh  moneta_recall_format.py  pyproject.toml
home/cli/claude/commands/: brain.md
home/cli/claude/mem0-migrate/: .gitignore  README.md  pyproject.toml
home/cli/claude/mem0-migrate/src/mem0_migrate/: __init__.py  checkpoint.py  compose.py  db.py  run.py
home/cli/claude/mem0-migrate/tests/: conftest.py  test_checkpoint.py  test_compose.py  test_db.py  test_run.py
home/cli/claude/tests/: test_mem0ctl.sh  test_moneta_recall_format.py  test_recall_format.py
home/secrets/: moneta-cf-access-client-id.tpl  moneta-cf-access-client-secret.tpl  moneta-token.tpl  personal-env.tpl
modules/memory-watchdog/: memory-watchdog.nix  watchdog.sh
modules/profiles/: base.nix  dev.nix  gui-small.nix
modules/repomix/: repomix.config.json  repomix.nix  repos.toml
scripts/: export-iterm-profile.sh
scripts/codebase-brain/: Containerfile  README.md  package.json  tsconfig.json
system/: hm.nix  nix.nix
(+82 files in other folders)
