[project]
name = "mem0-recall-format"
version = "0.1.0"
description = "Format OpenMemory /filter responses into compact SessionStart blocks"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mem0_recall_format.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
