[project]
name = "mem0-migrate"
version = "0.1.0"
description = "One-shot migration of claude-mem SQLite observations/summaries into Mem0/OpenMemory via REST"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
mem0-migrate = "mem0_migrate.run:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mem0_migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
